[package]
name = "fuel-gossiper"
version = "0.1.0"
edition = "2021"

build = "build/build.rs"

[dependencies]
fuel-core-p2p = "0.41.0"
tokio = "1.43.0"
anyhow = "1.0.95"
fuel-core-types = "0.41.0"
multiaddr = { git = "https://github.com/rymnc/rust-multiaddr", rev = "48f2065" }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tai64 = "=4.0.0"

[patch.crates-io]
multiaddr = { git = "https://github.com/rymnc/rust-multiaddr", rev = "48f2065" }

[build-dependencies]
fuel-core-types = "0.41.0"
anyhow = "1.0.95"
fuel-core-p2p = "0.41.0"